--- a/css/cayman.css
+++ b/css/cayman.css
@@ -48,7 +48,16 @@ a {
       .btn + .btn {
         margin-top: 1rem;
         margin-left: 0; } }
-
+.g-signin2{
+    display: inline-block;
+  margin-bottom: 1rem;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.08);
+  border-color: rgba(255, 255, 255, 0.2);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0.3rem;
+}
 .page-header {
   color: #fff;
   text-align: center;
